Added missing create with owner methods in SysMLFactory, moved some stuff arround, cleaned up OMFPluginEnvOptionsGroup